Added buttons for playing

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="script.js"></script>
 </head>
 <body>
+
+    <button id="choices" onclick="playRound()">Play Round!</button>
+    <button id="choices" onclick="game()">Play a game of five!</button>
     
 </body>
 </html>
