--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="script.js"></script>
+    <title>Rock, Paper, Scissors</title>
 </head>
 <body>
 
-    <button id="choices" onclick="playRound()">Play Round!</button>
-    <button id="choices" onclick="game()">Play a game of five!</button>
+<h1> Rock, Paper, Scissors</h1>
+    <div id="gameResult"></div>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissor">Scissors</button>
+    <div>
+        <h3>Score</h3>
+        <p id="playerScore"></p>
+        <p id="computerScore"></p>
+        <p id="tieScore"></p>
+    </div>
     
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
